<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <Spinner
            android:id="@+id/hospitalSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:visibility="gone"
            android:popupBackground="@color/icons"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20" />

        <Spinner
            android:id="@+id/dateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:visibility="gone"
            android:popupBackground="@color/icons"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formLayout"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:background="@drawable/spinner_bg" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/date"
                    android:enabled="false"
                    android:clickable="false"
                    android:inputType="date"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/primary_text">

                <EditText
                    android:id="@+id/edtTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/time"
                    android:inputType="time"
                    android:enabled="false"
                    android:clickable="false"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnBookAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:background="@drawable/shadow_button"
                android:padding="@dimen/dp5"
                android:layout_marginBottom="@dimen/dp20"
                android:text="@string/bookAppointment"
                android:textColor="@color/icons" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>